force-app/main/default/objects/BIAV_Directory_Entry__c/BIAV_Directory_Entry__c.object-meta.xml
<CustomObject>
    <description>Online Directory resource listing information</description>
    <label>Directory Entry</label>
    <nameField>
        <label>Directory Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directory Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>