force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Address1__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Address1__c</fullName>
    <description>Complete Address1</description>
    <inlineHelpText>Complete Address1</inlineHelpText>
    <label>dir_address_line_1</label>
    <length>120</length>
    <type>Text</type>
</CustomField>