force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Address2__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Address2__c</fullName>
    <description>Complete Address 2</description>
    <inlineHelpText>Complete Address 2</inlineHelpText>
    <label>dir_address_line_2</label>
    <length>120</length>
    <type>Text</type>
</CustomField>