force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Category__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Category__c</fullName>
    <description>Enter one or more of the Community Resource Categories for this listing</description>
    <inlineHelpText>Enter one or more of the Community Resource Categories for this listing</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative therapies</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Behavior Services</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Club House</fullName>
            </value>
            <value>
                <fullName>Cognitive Services</fullName>
            </value>
            <value>
                <fullName>Concussion Treatment</fullName>
            </value>
            <value>
                <fullName>Counselor/ Licensed Clinical Social Worker</fullName>
            </value>
            <value>
                <fullName>Day Program</fullName>
            </value>
            <value>
                <fullName>Day Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Home Admission Program</fullName>
            </value>
            <value>
                <fullName>Inpatient Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Long Term Care</fullName>
            </value>
            <value>
                <fullName>Mental Health Professional</fullName>
            </value>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Neuropsychiatrist</fullName>
            </value>
            <value>
                <fullName>Neuropsychological assessment</fullName>
            </value>
            <value>
                <fullName>Neuropsychologist</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist</fullName>
            </value>
            <value>
                <fullName>Optometrist/Neuro-Optometrist</fullName>
            </value>
            <value>
                <fullName>Outpatient Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Physical evaluation and diagnosis</fullName>
            </value>
            <value>
                <fullName>Physical Medicine and Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Physical Therapist</fullName>
            </value>
            <value>
                <fullName>Psychiatrist</fullName>
            </value>
            <value>
                <fullName>Psychologist</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Return to Work Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>