force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Contact__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact of the Community Resource</description>
    <inlineHelpText>Contact of the Community Resource</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Community_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>