force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Description__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Description__c</fullName>
    <description>Description</description>
    <inlineHelpText>Description</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>