force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_dir_categories__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_dir_categories__c</fullName>
    <label>dir_categories</label>
    <length>200</length>
    <type>Text</type>
</CustomField>