force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_dir_description__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_dir_description__c</fullName>
    <description>This field will contain encoded character sequences for special characters when loaded from the Directory download</description>
    <inlineHelpText>This field will contain encoded character sequences for special characters when loaded from the Directory download</inlineHelpText>
    <label>dir_description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>