force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_dir_directory_id__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_dir_directory_id__c</fullName>
    <label>dir_directory_id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>