force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_dir_images__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_dir_images__c</fullName>
    <label>dir_images</label>
    <length>50</length>
    <type>Text</type>
</CustomField>