force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Email__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Email__c</fullName>
    <description>Email listing for Community Resource</description>
    <inlineHelpText>Email listing for Community Resource</inlineHelpText>
    <label>dir_email</label>
    <type>TextArea</type>
</CustomField>