force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_End_Date__c</fullName>
    <description>When did this Community Resource listing end?</description>
    <inlineHelpText>When did this Community Resource listing end?</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>