force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Latitude__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Latitude__c</fullName>
    <description>Latitude of Community Resource address</description>
    <inlineHelpText>Latitude of Community Resource address</inlineHelpText>
    <label>dir_latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>