force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_level_id__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_level_id__c</fullName>
    <description>A field used by the Directory web app.  Currently all values are 1</description>
    <inlineHelpText>A field used by the Directory web app.  Currently all values are 1</inlineHelpText>
    <label>dir_level_id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>