force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Longitude__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Longitude__c</fullName>
    <description>Longitude of Community Resource address</description>
    <inlineHelpText>Longitude of Community Resource address</inlineHelpText>
    <label>dir_longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>