force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Organization__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SF Organization of the Community Resource</description>
    <inlineHelpText>SF Organization of the Community Resource</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Community_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>