force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_OrgHigh__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_OrgHigh__c</fullName>
    <description>High Level Summary Organization</description>
    <inlineHelpText>High Level Summary Organization</inlineHelpText>
    <label>OrgHigh</label>
    <length>120</length>
    <type>Text</type>
</CustomField>