force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Phone__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Phone__c</fullName>
    <description>Phone listing for Community Resource</description>
    <inlineHelpText>Phone listing for Community Resource</inlineHelpText>
    <label>dir_phone</label>
    <type>TextArea</type>
</CustomField>