force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Post_id__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Post_id__c</fullName>
    <description>Unique ID assigned by Directory web app</description>
    <inlineHelpText>Unique ID assigned by Directory web app</inlineHelpText>
    <label>dir_post_id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>