force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Professionals_Name__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Professionals_Name__c</fullName>
    <description>Professionals name as listed in the Online Directory</description>
    <inlineHelpText>Professionals name as listed in the Online Directory</inlineHelpText>
    <label>dir_professional_s_name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>