force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Start_Date__c</fullName>
    <description>When did the Community Resource Listing begin?</description>
    <inlineHelpText>When did the Community Resource Listing begin?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>