force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Title__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Title__c</fullName>
    <description>Directory Listing of Organization or Individual when without Organization</description>
    <inlineHelpText>Directory Listing of Organization or Individual when without Organization</inlineHelpText>
    <label>dir_title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>