force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_Website__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_Website__c</fullName>
    <description>Website</description>
    <inlineHelpText>Website</inlineHelpText>
    <label>dir_website</label>
    <type>Url</type>
</CustomField>