force-app/main/default/objects/BIAV_Directory_Entry__c/fields/BIAV_CR_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>BIAV_CR_ZipCode__c</fullName>
    <description>Zip code</description>
    <inlineHelpText>Zip code</inlineHelpText>
    <label>dir_zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>