force-app/main/default/objects/BIAV_Directory_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BIAV_CR_Organization__c</columns>
    <columns>BIAV_CR_Professionals_Name__c</columns>
    <columns>BIAV_CR_Post_id__c</columns>
    <columns>BIAV_CR_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>