force-app/main/default/objects/BIAV_Directory_Entry__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>BIAV_CR_Organization__c</columns>
    <columns>BIAV_CR_Title__c</columns>
    <columns>BIAV_CR_Professionals_Name__c</columns>
    <columns>BIAV_CR_Contact__c</columns>
    <columns>BIAV_CR_Category__c</columns>
    <columns>BIAV_CR_dir_categories__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>mary</value>
    </filters>
    <label>Copy of All</label>
</ListView>